# iio-emu

./: .clang-format  .gitignore  CMakeLists.txt  CREATE_VIRTUAL_DEVICE.md  GENERIC_EMULATOR.md  README.md  azure-pipelines.yml  iio-emu.iss.cmakein  main.cpp
ci/azure/: before_install_darwin  before_install_linux  build_win.ps1  deps.sh  generate_exe.ps1  install_deps_win.ps1  lib.sh  make_darwin  make_linux  publish_deps.ps1
cmake/: DarwinPackaging.cmake  LinuxPackaging.cmake  compileResources.cmake  compilerWarnings.cmake  staticAnalyzers.cmake
iiod/context/adalm2000/: adalm2000.xml  adalm2000_context.cpp  adalm2000_context.hpp
iiod/context/adalm2000/devices/: m2k_adc.cpp  m2k_adc.hpp  m2k_dac.cpp  m2k_dac.hpp  m2k_logic_rx.cpp  m2k_logic_rx.hpp  m2k_logic_tx.cpp  m2k_logic_tx.hpp
iiod/context/generic_xml/: generic_xml_context.cpp  generic_xml_context.hpp
iiod/context/generic_xml/devices/: generic_rx_device.cpp  generic_rx_device.hpp  generic_tx_device.cpp  generic_tx_device.hpp
iiod/devices/: abstract_device.cpp  abstract_device.hpp  abstract_device_in.hpp  abstract_device_out.hpp
iiod/ops/: abstract_ops.cpp  abstract_ops.hpp  factory_ops.cpp  factory_ops.hpp  tinyiiod_ops_wrapper.cpp  tinyiiod_ops_wrapper.hpp
networking/: abstract_socket.hpp  network_interface.hpp  network_unix.cpp  network_unix.hpp  network_win.cpp  network_win.hpp  socket_unix.cpp  socket_unix.hpp  socket_win.cpp  socket_win.hpp  tcp_server.cpp  tcp_server.hpp
tools/: CMakeLists.txt  README.md  genxml.c
utils/: attr_ops_xml.cpp  attr_ops_xml.hpp  input_parser.cpp  input_parser.hpp  logger.cpp  logger.hpp  network_ops.cpp  network_ops.hpp  utility.cpp  utility.hpp  xml_utils.cpp  xml_utils.hpp
